# agentic-news-reaper

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  SETUP_AND_REFERENCE.md  TASKS.md  main.py  pyproject.toml
agentic_news_reaper/: __init__.py  cli.py  config.py  hn_client.py  logging.py  monty_runtime.py
agentic_news_reaper/agents/: __init__.py  epm.py  fma.py  hod.py  ndd.py
agentic_news_reaper/db/: __init__.py  connection.py  schema.py
agentic_news_reaper/templates/: patterns.yaml
tests/: test_cli.py  test_database.py  test_epm.py  test_fma.py  test_hn_client.py  test_hod.py  test_smoke.py
