[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-news-reaper"
version = "0.1.0"
description = "Deterministic Execution Engine – Multi-Agent System for News Catchup"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Founder Team", email = "founders@example.com" }]
keywords = ["hacker-news", "multi-agent", "determinism", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "click>=8.1.0",             # CLI framework
    "httpx>=0.24.0",            # HTTP client for HN API
    "jinja2>=3.1.0",            # Templating for briefs
    "pydantic>=2.0.0",          # Data validation
    "pydantic-settings>=2.0.0", # Data validation & settings management
    "pydantic-monty>=0.0.7",    # Monty code execution
    "python-dotenv>=1.0.0",     # .env config support
    "pyyaml>=6.0.0",            # YAML pattern loading
    "sqlite-utils>=3.34.0",     # SQLite helpers
    "structlog>=23.2.0",        # Structured logging
]

[project.optional-dependencies]
dev = [
    "black>=23.9.0",
    "mypy>=1.5.0",
    "types-click>=7.1.0",     # Type stubs for Click
    "types-PyYAML>=6.0.0",    # Type stubs for PyYAML
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.0.292",
]

[project.scripts]
agentic-news-reaper = "agentic_news_reaper.cli:main"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=agentic_news_reaper --cov-report=term-missing"
